Refactored entire images retrival logic, now we are proving blob storage URL for browser to get images without API help, CDN does the magic
